--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bulma": "^0.7.4",
     "disqusjs": "^1.2.3",
+    "lodash-es": "^4.17.15",
     "prism-theme-one-dark": "^1.0.0",
     "smoothscroll-for-websites": "^1.4.9",
     "tinytime": "^0.2.6"
